syntax = "proto3";
package credential;

import "state.proto";

// VCS Credentials allow OrbitalCI to clone and download code for test and deployment
// Currently supported VCS types:
//    * Bitbucket
//    * GITHUB

enum VCS_TYPE {
    BITBUCKET = 0;
    GITHUB = 1;
    // GITLAB = 2;
    // GITTEA = 3;
}

// Server returns vcs_cred_entry as response
message vcs_cred_create_request {
    string org = 1;
    VCS_TYPE vcs_type = 2;
    string secret = 3;
}

message vcs_cred_entry {
    int32 id = 1;
    int32 org_id = 2;
    VCS_TYPE vcs_type = 3;
    state.ACTIVE_STATE active_state = 4;
}

// Server returns vcs_cred_entry as response
message vcs_cred_delete_request {
    string org = 1;
    string name = 2;
    bool force = 3;
}

// Server returns vcs_cred_entry as response
message vcs_cred_update_request {
    string org = 1;
    string name = 2;
    string secret = 3;
    state.ACTIVE_STATE active_state = 4;
}

// Server returns vcs_cred_list_response as response
message vcs_cred_list_request {
    string org = 1;
    VCS_TYPE vcs_type = 2;
}

message vcs_cred_list_response {
    repeated vcs_cred_entry vcs_cred_entries = 1;
}

service credential_service {
    rpc create_vcs_cred(vcs_cred_create_request) returns (vcs_cred_entry);
    rpc delete_vcs_cred(vcs_cred_delete_request) returns (vcs_cred_entry);
    rpc update_vcs_cred(vcs_cred_update_request) returns (vcs_cred_entry);
    rpc list_vcs_creds(vcs_cred_list_request) returns (vcs_cred_list_response);
}
